#pragma once
class Colision
{
    private:
        /* data* /
     public:
        Colision(/* args */) {}
        ~Colision() {}
};