#pragma once
class Direccion
{
    private:
        /* data* /
     public:
        Direccion(/* args */) {}
        ~Direccion() {}
};