#pragma once
class Interfaz
{
    private:
        /* data* /
     public:
        Interfaz(/* args */) {}
        ~Interfaz() {}
};