#pragma once
class PildoraEspecial
{
    private:
        /* data* /
     public:
        PildoraEspecial(/* args */) {}
        ~PildoraEspecial() {}
};