#pragma once
class Puntaje
{
    private:
        /* data* /
     public:
        Puntaje(/* args */) {}
        ~Puntaje() {}
};