#pragma once
class PuntoExtra
{
    private:
        /* data* /
     public:
        PuntoExtra(/* args */) {}
        ~PuntoExtra() {}
};