#pragma once
class Rectangulo
{
    private:
        /* data* /
     public:
        Rectangulo(/* args */) {}
        ~Rectangulo() {}
};