#pragma once
class Velocidad
{
    private:
        /* data* /
     public:
        Velocidad(/* args */) {}
        ~Velocidad() {}
};